Changelog:
2.2
added czech language
fixes

2.1.2
option to reverse list
improved view pager indicator
add ukraine language
updated translations
fixes

2.1.1
updated translations
fixes

2.1
redesigned UI
improved dark theme
enable/disable root
change group/owner (root)
improvements

2.0.5
bug fixes
added bulgarian and portuguese language
update russian strings

2.0.4
removed appmanager - SE should be a clean filemanager
reduced apk size using proguard
move to position of previous folder when navigate back
updated italian strings
fixes and improvements

v2.0.3
fixed bug when creating bookmarks
improved navigation drawer

v2.0.2
readded support for multi-window devices (only tested on TouchWiz)
add finnish language
improved search
minor fixes and improvements
updated translations

v2.0.1
added option to unrar files
updated translations
minor fixes and improvements

v2.0
add a dark theme
add simplified chinese language
add arabic language
add thai language
new actionmode
new icons - smaller apk size
new search interface
file shortcuts
updated translations
improved copy paste overwrite
sort by date
improved UI
a lot of fixes

v1.9.4
added option to change permissions
added korean and french language
added a fileobserver
improved thumbnail handling
fixed some sharing issues
fixed minor bugs

v1.9.3
traditional chinese language 
vietnamese language
updated slovakian language
some other small changes

v1.9.2
get default date format from system
added md5-sum in details - the text is clickable there
fixed crash when the file cannot be open
added exit button in drawer
update roottools lib

v1.9.1
fixed many bugs
small ui changes
improved zip/unzip files
added slovakian language
removed search suggestions - never used it
search in current directory

v1.9
fixed rotation bug
added navigation drawer and other ui changes
removed tar option because of many bugs
updated Russian language
minor fixes
maybe forgot something

v1.8.5
fixed moving file bug
appicon caching