@@ -1,6 +1,8 @@
 Changelog:
 2.2
+search files with root (only partial)
 added czech language
+updated translation
 fixes
 
 2.1.2
